# ig-profile-card

./: .env.example  .gitignore  README.md  camofox.py  card_generator.py  config.py  cropper.py  justfile  main.py  profile_fetcher.py  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh
